manifests/kustomize/base/patch-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  template:
    spec:
      containers:
        - name: backend
