manifests/kustomize/base/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  template:
    spec:
      containers:
        - name: frontend
