manifests/kustomize/base/frontend-resources.yaml
---
# Source: frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  labels:
    helm.sh/chart: frontend-0.1.0
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend-app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend-app
---
# Source: frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    helm.sh/chart: frontend-0.1.0
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend-app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend-app
  template:
    metadata:
      labels:
        helm.sh/chart: frontend-0.1.0
        app.kubernetes.io/name: frontend
        app.kubernetes.io/instance: frontend-app
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: default
      containers:
        - name: frontend
          image: "abhradippaul/nodejs-frontend-devops:1.16.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              initialDelaySeconds: 5
              path: /
              periodSeconds: 5
              port: http
          readinessProbe:
            httpGet:
              initialDelaySeconds: 5
              path: /
              periodSeconds: 5
              port: http
          resources:
            limits:
              cpu: 40m
              memory: 80Mi
            requests:
              cpu: 40m
              memory: 80Mi
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf.template
              name: nginx-config
              subPath: nginx.conf.template
      volumes:
        - configMap:
            name: nginx-config
            optional: false
          name: nginx-config
